<resources>
    <string name="app_name">Beyond Mars</string>
    <string name="space_background">space background</string>
    <string name="game_logo">game logo</string>
    <string name="team_logo">team logo</string>
    <string name="mars_background">mars background</string>
    <string name="rocket">Rocket</string>
    <string name="preparing_mission">Preparing Mission...</string>
    <string name="mission_tip">🚀 Mission Tip</string>
    <string name="exit">Exit</string>
    <string name="version_1_0_0">Version 1.0.0</string>
    <string name="settings">Settings</string>
    <string name="how_to_play">HOW TO PLAY</string>
    <string name="energy_coins">energy coins</string>
    <string name="play">PLAY</string>
    <string name="continues">CONTINUE</string>
    <string name="music">🎵 Music</string>
    <string name="sound">🔊 Sound</string>
    <string name="vibration">📳 Vibration</string>
    <string name="reset_progress">🗑 Reset Progress</string>
    <string name="privacy_policy">🔒 Privacy Policy</string>
    <string name="credits">🚀 Credits</string>
    <string name="beyond_mars_v1_0">Beyond Mars v1.0</string>
    <string name="setting">⚙ SETTINGS</string>
    <string name="select_planet">SELECT PLANET</string>
    <string name="swipe_to_explore">Swipe to Explore →</string>
    <string name="back">Back</string>
    <string name="unlocked">Unlocked</string>
    <string name="mars">Mars</string>
    <string name="locked">locked</string>
    <string name="minerals_gems">minerals gems</string>
    <string name="levels">levels</string>
    <string name="build">Build</string>
    <string name="constructing">Constructing...</string>
    <string name="game_paused">GAME PAUSED</string>
    <string name="mission">MISSION</string>
    <string name="shop">Shop</string>
    <string name="workers">Workers</string>
    <string name="astronaut">astronaut</string>
    <string name="stars">stars</string>
    <string name="sun">sun</string>
    <string name="moon">moon</string>
    <string name="base">base</string>
    <string name="building_solar_panel">building solar panel</string>
    <string name="building_mine">building mine</string>
    <string name="building_greenhouse">building greenhouse</string>
    <string name="smoke">smoke</string>
</resources>