<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#040816"
    tools:context=".SplashActivity">

    <ImageView
        android:id="@+id/imgBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:contentDescription="@string/space_background"
        android:src="@drawable/bg_space" />

    <ImageView
        android:id="@+id/imgOrbitX"
        android:layout_width="170dp"
        android:layout_height="90dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/team_logo"
        android:src="@drawable/orbitx_logo" />

    <ImageView
        android:id="@+id/imgMars"
        android:layout_width="520dp"
        android:layout_height="520dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="-130dp"
        android:layout_marginBottom="-120dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/mars_background"
        android:src="@drawable/mars" />

    <ImageView
        android:id="@+id/imgGameLogo"
        android:layout_width="320dp"
        android:layout_height="140dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/game_logo"
        android:src="@drawable/beyond_mars_logo" />

</RelativeLayout>