<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000">

    <!-- Space Background -->
    <ImageView
        android:id="@+id/bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_space"
        android:contentDescription="@string/space_background"/>

    <!-- Stars Overlay -->
    <ImageView
        android:id="@+id/stars"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.5"
        android:scaleType="centerCrop"
        android:src="@drawable/stars_overlay"
        android:contentDescription="Stars"/>

    <!-- Landing Glow -->
    <ImageView
        android:id="@+id/glow"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginBottom="150dp"
        android:alpha="0"
        android:src="@drawable/glow_circle"
        android:contentDescription="Glow"/>

    <!-- Rocket -->
    <ImageView
        android:id="@+id/rocket"
        android:layout_width="150dp"
        android:layout_height="250dp"
        android:layout_gravity="center_horizontal"
        android:translationY="-900dp"
        android:src="@drawable/rocket"
        android:contentDescription="@string/rocket"/>

    <!-- Dust Cloud -->
    <ImageView
        android:id="@+id/dust"
        android:layout_width="340dp"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginBottom="120dp"
        android:alpha="0"
        android:scaleType="fitCenter"
        android:src="@drawable/dust"
        android:contentDescription="@string/smoke"/>

    <!-- Astronaut -->
    <ImageView
        android:id="@+id/astronaut"
        android:layout_width="80dp"
        android:layout_height="120dp"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginBottom="150dp"
        android:alpha="0"
        android:src="@drawable/astronaut"
        android:contentDescription="@string/astronaut"/>

    <!-- Mars Surface -->
    <ImageView
        android:id="@+id/marsSurface"
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:layout_gravity="bottom"
        android:scaleType="fitXY"
        android:src="@drawable/mars_ground"
        android:contentDescription="@string/mars"/>

    <!-- Black Fade Overlay -->
    <View
        android:id="@+id/fadeOverlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#000000"
        android:alpha="0"/>

</FrameLayout>